--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "plugins/markdown"
   ],
   "dependencies": {
-    "mithril": "^1.1.4"
+    "mithril": "^1.1.4",
+    "hslayout": "^2.0.0"
   }
 }
