--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "hswidget",
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "version": "2.1.1",
-  "keywords": [],
-  "description": "Helpful Scripts UI widgets",
-  "author": {
-    "name": "masterscripter",
-    "email": "helpfulscripts@gmail.com"
-  },
-  "scripts": {
-    "build": "grunt travis",
-    "test": "grunt test"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/HelpfulScripts/hsWidget.git"
-  },
-  "engines": {
-    "node": ">= 8.9.0"
-  },
-  "plugins": [
-    "plugins/markdown"
-  ],
-  "devDependencies": {
-    "@types/node": "^7.0.66",
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-less": "^2.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-ts": "^6.0.0-beta.19",
-    "grunt-tslint": "^4.0.1",
-    "grunt-typedoc": "^0.2.4",
-    "grunt-webpack": "^3.1.2",
-    "tslint": "^4.5.1",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.9.2",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.14.0",
-    "hslayout": "^2.0.0"
-  },
-  "dependencies": {
+    "name": "hswidget",
+    "main": "./index.js",
+    "types": "./index.d.ts",
+    "version": "2.1.1",
+    "keywords": [],
+    "description": "Helpful Scripts UI widgets",
+    "author": {
+      "name": "masterscripter",
+      "email": "helpfulscripts@gmail.com"
+    },
+    "scripts": {
+      "build": "grunt travis",
+      "test": "grunt test"
+    },
+    "license": "MIT",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/HelpfulScripts/hsWidget.git"
+    },
+    "engines": {
+      "node": ">= 8.9.0"
+    },
+    "plugins": [
+      "plugins/markdown"
+    ],
+    "devDependencies": {
+      "@types/node": "^7.0.66",
+      "grunt": "^1.0.3",
+      "grunt-contrib-clean": "^1.0.0",
+      "grunt-contrib-concat": "^1.0.1",
+      "grunt-contrib-copy": "^1.0.0",
+      "grunt-contrib-less": "^2.0.0",
+      "grunt-contrib-uglify": "^2.0.0",
+      "grunt-contrib-watch": "^1.1.0",
+      "grunt-ts": "^6.0.0-beta.19",
+      "grunt-tslint": "^4.0.1",
+      "grunt-typedoc": "^0.2.4",
+      "grunt-webpack": "^3.1.2",
+      "tslint": "^4.5.1",
+      "typedoc": "^0.11.1",
+      "typescript": "^2.9.2",
+      "uglifyjs-webpack-plugin": "^1.2.5",
+      "webpack": "^4.14.0"
+    },
+    "dependencies": {
+    }
   }
-}
+  
