--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-    "name": "hslayout",
+    "name": "hswidget",
     "main": "./index.js",
     "types": "./index.d.ts",
-    "version": "2.1.0",
-    "keywords": [
-      "layout",
-      "UI"
-    ],
-    "description": "Helpful Scripts UI layout utility",
+    "version": "2.1.1",
+    "keywords": [],
+    "description": "Helpful Scripts UI widgets",
     "author": {
       "name": "masterscripter",
       "email": "helpfulscripts@gmail.com"
@@ -19,7 +16,7 @@
     "license": "MIT",
     "repository": {
       "type": "git",
-      "url": "https://github.com/HelpfulScripts/hsLayout.git"
+      "url": "https://github.com/HelpfulScripts/hsWidget.git"
     },
     "engines": {
       "node": ">= 8.9.0"
