--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "typedoc": "^0.11.1",
       "typescript": "^2.9.2",
       "uglifyjs-webpack-plugin": "^1.2.5",
-      "webpack": "^4.14.0"
+      "webpack": "^4.14.0",
+      "hslayout": "^2.0.0"
     },
     "dependencies": {
     }
