--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.14.0",
+    "webpack": "^4.14.0"
   },
   "dependencies": {
     "mithril": "^1.1.6",
