--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-tslint": "^4.0.1",
     "grunt-typedoc": "^0.2.4",
     "grunt-webpack": "^3.1.2",
+    "mithril-query": "^2.4.1",
     "tslint": "^4.5.1",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2",
