--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "grunt-typedoc": "^0.2.4",
     "grunt-webpack": "^3.1.2",
     "mithril-query": "^2.4.1",
+    "coveralls": "^3.0.2",
+    "jest": "^23.4.2",
+    "ts-jest": "^23.0.1",
     "tslint": "^4.5.1",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2",
