--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-tslint": "^4.0.1",
     "grunt-typedoc": "^0.2.4",
     "grunt-webpack": "^3.1.2",
+    "mithril": "^1.1.6",
     "mithril-query": "^2.4.1",
     "coveralls": "^3.0.2",
     "grunt-coveralls": "^2.0.0",
