--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "build": "grunt build",
-    "test": "grunt test"
+    "test": "grunt test",
+    "debug": "node --nolazy --inspect-brk=9229 Slider.jest.ts"
   },
   "license": "MIT",
   "repository": {
@@ -45,7 +46,7 @@
     "grunt-typedoc": "^0.2.4",
     "grunt-webpack": "^3.1.2",
     "mithril": "^1.1.6",
-    "mithril-query": "^2.4.1",
+    "mithril-query": "^2.5.1",
     "coveralls": "^3.0.2",
     "grunt-coveralls": "^2.0.0",
     "jest": "^23.4.2",
