fixed collabsible bug

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "es6"
   ],
   "description": "Helpful Scripts UI widgets",
-  "homepage": "https://helpfulscripts.github.io/hsWidgets/indexGH.html#!/api/hsWidgets/0",
+  "homepage": "https://helpfulscripts.github.io/hsWidget/#!/api/hsWidget/0",
   "author": {
     "name": "masterscripter",
     "email": "helpfulscripts@gmail.com"
