--- a/package.json
+++ b/package.json
@@ -31,34 +31,34 @@
     "plugins/markdown"
   ],
   "devDependencies": {
-    "@types/node": "^7.0.66",
-    "@types/mithril": "^1.1.12",
-    "@types/jest": "^23.3.0",
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-less": "^2.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-ts": "^6.0.0-beta.19",
+    "@types/node": "^10.14.14",
+    "@types/mithril": "^2.0.0",
+    "@types/jest": "^23.3.14",
+    "grunt": "^1.0.4",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-less": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-ts": "^6.0.0-beta.22",
     "grunt-tslint": "^4.0.1",
-    "grunt-typedoc": "^0.2.4",
-    "grunt-webpack": "^3.1.2",
-    "mithril": "^1.1.6",
-    "mithril-query": "^2.5.1",
-    "coveralls": "^3.0.2",
+    "@vamship/grunt-typedoc": "^1.6.1",
+    "grunt-webpack": "^3.1.3",
+    "mithril": "^2.0.4",
+    "mithril-query": "^3.0.1",
+    "coveralls": "^3.0.5",
     "grunt-coveralls": "^2.0.0",
-    "jest": "^23.4.2",
-    "ts-jest": "^23.0.1",
-    "tslint": "^4.5.1",
-    "typedoc": "^0.12.0",
-    "typescript": "^3.1.1",
+    "jest": "^24.8.0",
+    "ts-jest": "^24.0.0",
+    "tslint": "^5.18.0",
+    "typedoc": "^0.15.0",
+    "typescript": "^3.5.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.14.0"
-  },
+    "webpack": "^4.39.1"
+},
   "dependencies": {
-    "mithril": "^1.1.6",
-    "hslayout": "^2.0.0"
+    "mithril": "^2.0.4",
+    "hslayout": "*"
   }
 }
