--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "grunt-webpack": "^3.1.3",
     "coveralls": "^3.0.5",
     "grunt-coveralls": "^2.0.0",
+    "mithril-query": "^3.0.1",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.19.0",
