--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^12.12.21",
     "@types/mithril": "^2.0.2",
     "@types/jest": "^24.0.24",
+    "@types/showdown": "^1.9.3",
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -58,6 +59,7 @@
   },
   "dependencies": {
     "mithril": "^2.0.4",
-    "hslayout": "^2.4.12"
+    "hslayout": "^2.4.12",
+    "showdown": "^1.9.1"
   }
 }
