--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,20 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-      {
-        "type": "node",
-        "request": "launch",
-        "name": "Jest All",
-        "runtimeArgs": [
-            "--inspect-brk",
-            "${workspaceRoot}/node_modules/jest/",
-            "--runInBand",
-            "-c",
-            "${workspaceRoot}/jest.config.json"
-        ],
-        "console": "integratedTerminal",
-        "internalConsoleOptions": "neverOpen",
-        "port":9229
-        
-    }]
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Jest All",
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+            "args": [
+                "-i",
+                "-c=jest.config.json"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "outFiles": [
+                "${workspaceRoot}/_test/**/*"
+            ]
+        }
+    ]
   }
