--- a/docs/package.json
+++ b/docs/package.json
@@ -31,9 +31,9 @@
     "plugins/markdown"
   ],
   "devDependencies": {
-    "@types/node": "^12.12.21",
+    "@types/node": "^13.13.4",
     "@types/mithril": "^2.0.2",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^25.2.x",
     "@types/showdown": "^1.9.3",
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^2.0.0",
@@ -49,13 +49,13 @@
     "coveralls": "^3.0.9",
     "grunt-coveralls": "^2.0.0",
     "mithril-query": "^3.0.1",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.2.0",
-    "tslint": "^5.20.1",
-    "typedoc": "^0.15.5",
-    "typescript": "^3.7.3",
-    "terser-webpack-plugin": "^2.3.1",
-    "webpack": "^4.41.3"
+    "jest": "^25.5.x",
+    "ts-jest": "^25.4.x",
+    "tslint": "^6.1.x",
+    "typedoc": "^0.17.6",
+    "typescript": "^3.8.3",
+    "terser-webpack-plugin": "3.0.x",
+    "webpack": "^4.43.x"
   },
   "dependencies": {
     "mithril": "^2.0.4",
