auto-insert today as Label date when entering edit mode

--- a/docs/package.json
+++ b/docs/package.json
@@ -50,7 +50,7 @@
     "grunt-coveralls": "^2.0.0",
     "mithril-query": "^3.0.1",
     "jest": "^25.5.x",
-    "ts-jest": "^25.4.x",
+    "ts-jest": "25.5.x",
     "tslint": "^6.1.x",
     "typedoc": "^0.17.6",
     "typescript": "^3.8.3",
