--- a/docs/package.json
+++ b/docs/package.json
@@ -31,7 +31,7 @@
     "plugins/markdown"
   ],
   "devDependencies": {
-    "@types/node": "^13.13.4",
+    "@types/node": "14.0.x",
     "@types/mithril": "^2.0.2",
     "@types/jest": "^25.2.x",
     "@types/showdown": "^1.9.3",
