--- a/docs/package.json
+++ b/docs/package.json
@@ -43,7 +43,6 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-ts": "^6.0.0-beta.22",
-    "grunt-tslint": "^5.0.2",
     "@vamship/grunt-typedoc": "^1.7.3",
     "grunt-webpack": "^3.1.3",
     "coveralls": "^3.0.9",
@@ -51,7 +50,7 @@
     "mithril-query": "^3.0.1",
     "jest": "^25.5.x",
     "ts-jest": "25.5.x",
-    "tslint": "^6.1.x",
+    "eslint": "^6.8.0",
     "typedoc": "^0.17.6",
     "typescript": "^3.8.3",
     "terser-webpack-plugin": "3.0.x",
