--- a/package.json
+++ b/package.json
@@ -1,66 +1,71 @@
 {
-  "name": "hswidget",
-  "sideEffects": false,
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "version": "2.4.10",
-  "keywords": [
-    "UI",
-    "widgets",
-    "es6"
-  ],
-  "description": "Helpful Scripts UI widgets",
-  "homepage": "https://helpfulscripts.github.io/hsWidget/#!/api/hsWidget/0",
-  "author": {
-    "name": "masterscripter",
-    "email": "helpfulscripts@gmail.com"
-  },
-  "scripts": {
-    "build": "grunt build",
-    "test": "grunt test",
-    "debug": "node --nolazy --inspect-brk=9229 Slider.jest.ts"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/HelpfulScripts/hsWidget.git"
-  },
-  "engines": {
-    "node": ">= 10.14.0"
-  },
-  "plugins": [
-    "plugins/markdown"
-  ],
-  "devDependencies": {
-    "@types/node": "14.0.x",
-    "@types/mithril": "^2.0.2",
-    "@types/jest": "^25.2.x",
-    "@types/showdown": "^1.9.3",
-    "grunt": "^1.0.4",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-less": "^2.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-ts": "^6.0.0-beta.22",
-    "@vamship/grunt-typedoc": "^1.7.3",
-    "grunt-webpack": "^3.1.3",
-    "coveralls": "^3.0.9",
-    "grunt-coveralls": "^2.0.0",
-    "mithril-query": "^3.0.1",
-    "jest": "^25.5.x",
-    "ts-jest": "25.5.x",
-    "eslint": "^6.8.0",
-    "typedoc": "^0.17.6",
-    "typescript": "^3.8.3",
-    "terser-webpack-plugin": "3.0.x",
-    "webpack": "^4.43.x"
-  },
-  "dependencies": {
-    "mithril": "^2.0.4",
-    "hslayout": "2.4.x",
-    "hsutil": "3.5.x",
-    "showdown": "^1.9.1"
-  }
+    "name": "hswidget",
+    "sideEffects": false,
+    "main": "./cjs/index.js",
+    "module": "./esm/index.js",
+    "files": [
+        "bin/"
+    ],
+    "types": "./esm/index.d.ts",
+    "type": "module",
+    "scripts": {
+        "grunt": "grunt --gruntfile Gruntfile.cjs",
+        "prepublishOnly": "npm run grunt",
+        "postpublish": "npm version patch"
+    },
+    "version": "2.4.10",
+    "keywords": [
+        "UI",
+        "widgets",
+        "es6"
+    ],
+    "description": "Helpful Scripts UI widgets",
+    "homepage": "https://helpfulscripts.github.io/hsWidget/#!/api/hsWidget/0",
+    "author": {
+        "name": "masterscripter",
+        "email": "helpfulscripts@gmail.com"
+    },
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/HelpfulScripts/hsWidget.git"
+    },
+    "engines": {
+        "node": ">= 10.14.0"
+    },
+    "plugins": [
+        "plugins/markdown"
+    ],
+    "devDependencies": {
+        "@types/node": "14.0.x",
+        "@types/mithril": "^2.0.2",
+        "@types/jest": "^25.2.x",
+        "@types/showdown": "^1.9.3",
+        "grunt": "^1.0.4",
+        "grunt-contrib-clean": "^2.0.0",
+        "grunt-contrib-concat": "^1.0.1",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-less": "^2.0.0",
+        "grunt-contrib-uglify": "^4.0.0",
+        "grunt-contrib-watch": "^1.1.0",
+        "grunt-ts": "^6.0.0-beta.22",
+        "@vamship/grunt-typedoc": "^1.7.3",
+        "grunt-webpack": "^3.1.3",
+        "coveralls": "^3.0.9",
+        "grunt-coveralls": "^2.0.0",
+        "mithril-query": "^3.0.1",
+        "jest": "^25.5.x",
+        "ts-jest": "25.5.x",
+        "eslint": "^6.8.0",
+        "typedoc": "^0.17.6",
+        "typescript": "^3.8.3",
+        "terser-webpack-plugin": "3.0.x",
+        "webpack": "^4.43.x"
+    },
+    "dependencies": {
+        "mithril": "^2.0.4",
+        "hslayout": "2.4.x",
+        "hsutil": "3.5.x",
+        "showdown": "^1.9.1"
+    }
 }
