--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     ],
     "devDependencies": {
         "@types/node": "14.0.x",
-        "@types/mithril": "^2.0.2",
-        "@types/jest": "^25.2.x",
+        "@types/mithril": "2.0.x",
+        "@types/jest": "26.x.x",
         "@types/showdown": "^1.9.3",
-        "grunt": "^1.0.4",
+        "grunt": "1.1.x",
         "grunt-contrib-clean": "^2.0.0",
         "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-copy": "^1.0.0",
@@ -51,21 +51,21 @@
         "grunt-ts": "^6.0.0-beta.22",
         "@vamship/grunt-typedoc": "^1.7.3",
         "grunt-webpack": "^3.1.3",
-        "coveralls": "^3.0.9",
+        "coveralls": "3.1.x",
         "grunt-coveralls": "^2.0.0",
         "mithril-query": "^3.0.1",
         "jest": "^25.5.x",
-        "ts-jest": "25.5.x",
+        "ts-jest": "26.x.x",
         "eslint": "^6.8.0",
         "typedoc": "^0.17.6",
-        "typescript": "^3.8.3",
+        "typescript": "3.x.x",
         "terser-webpack-plugin": "3.0.x",
         "webpack": "^4.43.x"
     },
     "dependencies": {
         "mithril": "^2.0.4",
-        "hslayout": "2.4.x",
-        "hsutil": "3.5.x",
+        "hslayout": "2.x.x",
+        "hsutil": "3.x.x",
         "showdown": "^1.9.1"
     }
 }
