--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "grunt-ts": "^6.0.0-beta.22",
         "@vamship/grunt-typedoc": "^1.7.3",
         "grunt-webpack": "^3.1.3",
+        "hsnode": "2.x.x",
         "coveralls": "3.1.x",
         "grunt-coveralls": "^2.0.0",
         "mithril-query": "^3.0.1",
