--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "coveralls": "3.1.x",
         "grunt-coveralls": "^2.0.0",
         "mithril-query": "^3.0.1",
-        "jest": "^25.5.x",
+        "jest": "^26.x.x",
         "ts-jest": "26.x.x",
         "eslint": "^6.8.0",
         "typedoc": "^0.17.6",
