--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "url": "https://github.com/HelpfulScripts/hsWidget.git"
     },
     "engines": {
-        "node": ">= 10.14.0"
+        "node": ">= 14.2.0"
     },
     "plugins": [
         "plugins/markdown"
@@ -42,7 +42,7 @@
         "@types/mithril": "2.0.x",
         "@types/jest": "26.x.x",
         "@types/showdown": "^1.9.3",
-        "grunt": "1.2.x",
+        "grunt": "1.3.x",
         "grunt-contrib-clean": "^2.0.0",
         "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-copy": "^1.0.0",
@@ -51,7 +51,7 @@
         "grunt-contrib-watch": "^1.1.0",
         "grunt-ts": "^6.0.0-beta.22",
         "@vamship/grunt-typedoc": "^1.7.3",
-        "grunt-webpack": "^3.1.3",
+        "grunt-webpack": "4.x.x",
         "hsnode": "2.x.x",
         "coveralls": "3.1.x",
         "grunt-coveralls": "^2.0.0",
@@ -60,9 +60,9 @@
         "ts-jest": "26.x.x",
         "eslint": "^6.8.0",
         "typedoc": "^0.17.6",
-        "typescript": "3.x.x",
+        "typescript": "4.x.x",
         "terser-webpack-plugin": "3.0.x",
-        "webpack": "^4.43.x"
+        "webpack": "5.x.x"
     },
     "dependencies": {
         "@mdi/js": "5.3.x",
