--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "sideEffects": false,
     "main": "./bin/cjs/index.js",
     "module": "./bin/esm/index.js",
-    "files": [
-        "bin/"
-    ],
+    "files": ["bin/"],
     "types": "./bin/esm/index.d.ts",
     "type": "module",
     "scripts": {
