--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "eslint": "^6.8.0",
         "typedoc": "^0.17.6",
         "typescript": "4.x.x",
-        "terser-webpack-plugin": "3.0.x",
+        "terser-webpack-plugin": "5.x.x",
         "webpack": "5.x.x"
     },
     "dependencies": {
