--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "module",
     "scripts": {
         "grunt": "grunt --gruntfile Gruntfile.cjs",
-        "prepublishOnly": "npm run grunt",
+        "prepublishOnly": "npm run grunt publish",
         "postpublish": "npm version patch"
     },
     "version": "2.5.14",
