--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "types": "./bin/esm/index.d.ts",
     "type": "module",
     "scripts": {
+        "dev": "grunt --gruntfile Gruntfile.cjs dev",
+        "build": "grunt --gruntfile Gruntfile.cjs build",
         "grunt": "grunt --gruntfile Gruntfile.cjs",
         "prepublishOnly": "npm run grunt publish",
         "postpublish": "npm version patch"
